# Fullstack-Rust-web-app-template

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: main.rs
db/: Cargo.toml
frontend/: .gitignore  Cargo.toml
frontend/src/: app.rs  main.rs
frontend/src/modules/: requests.rs
