[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
models = {path="../models"}
yew = { version = "0.20.0", features = ["csr"] }
reqwest = {version="0.11.14", features=["json"]}
serde = "1.0.152"
yew-hooks = "0.2.0"
wasm-bindgen-futures = "0.4.33"
web-sys = "0.3.60"
wasm-bindgen = "0.2.83"
gloo = "0.8.0"
